# databricks-sftp-data-source

./: .gitignore  LICENSE  README.md  databricks.yml  pyproject.toml  requirements.txt  setup.py
CustomDataSource/: SFTPDataSource.py  __init__.py
config/: .env.example  azure_config.template.sh  config.yaml  dlt_pipeline_config.json  sftp_config.template.json
data/: customers.csv  orders.csv
notebooks/: 00_prerequisites.ipynb  01_infrastructure_setup.ipynb  02_uc_connection_setup.ipynb  03_dlt_pipeline.ipynb  03_dlt_pipeline.py  03_sftp_structured_streaming.ipynb  04_validation_tests.py
scripts/: setup_azure_infrastructure.sh  setup_databricks_secrets.sh
src/: __init__.py
src/DataSourceAPI/: __init__.py
src/ingest/: SFTPWriter.py  __init__.py
