[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-sftp-datasource"
version = "0.1.0"
description = "Custom SFTP data source for Databricks using Paramiko"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "paramiko==3.4.0",
    "pandas==2.1.4",
]

[project.urls]
Homepage = "https://github.com/yourusername/databricks-sftp-data-source"

[tool.setuptools]
packages = ["CustomDataSource"]

[tool.setuptools.package-data]
CustomDataSource = ["*.py"]
